# thp-first-it

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
frontend/static/css/: style.css
frontend/static/js/: common.js  index.js  references.js
frontend/templates/: index.html  references.html
src/: manage.py
src/config/: env.py  settings.py  urls.py
src/static/admin/js/: cashflow_admin.js
src/transfers/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/transfers/migrations/: 0001_initial.py
src/transfers/templates/: base.html  category_form.html  index.html  record_confirm_delete.html  record_form.html  reference_management.html  subcategory_form.html
src/transfers/templates/cash-flow-record/: record_confirm_delete.html  record_form.html
src/transfers/templates/category/: category_confirm_delete.html  category_form.html
src/transfers/templates/status/: status_confirm_delete.html  status_form.html
src/transfers/templates/subcategory/: subcategory_confirm_delete.html  subcategory_form.html
src/transfers/templates/transaction_type/: transaction_type_confirm_delete.html  transaction_type_form.html
